css/hydro.css
/* ... */
#subdivideyes-button{
    width: 100%;
    float: center;
    height: 50px;
}

#subdivideno-button{
    width: 100%;
    float: center;
    height: 50px;
}

#flowpath-button{
    width: 100%;
    float: center;
    height: 50px;
}

#clearflowpath-button{
    width: 100%;
    float: center;
}

#outlet-button{
    width: 100%;
    float: center;
    height: 50px;
}

#clearoutlet-button{
    width: 100%;
    float: center;
}

#subsheds-button{
    width: 100%;
    float: center;
    height: 50px;
}

#sourcearea-display{
    display: none;
}

#storm-button{
    width: 100%;
    float: center;
}

#createwintr20-button{
    width: 100%;
    float: center;
    height: 50px;
}

#email-button{
    width: 100%;
    float: center;
    height: 50px;
}

#contours-button{
    width: 100%;
    float: center;
}

#longpathdownload-button{
    width: 100%;
    float: center;
    display: none;
}

#soilsdownload-button{
    width: 100%;
    float: center;
    display: none;
}

#ludownload-button{
    width: 100%;
    float: center;
    display: none;
}

#infstreamsdownload-button{
    width: 100%;
    float: center;
    display: none;
}

#contoursdownload-button{
    width: 100%;
    float: center;
    display: none;
}

#showpixels-button{
    width: 100%;
    float: center;
    height: 50px;
}

#recalculate-button{
    width: 40%;
    float: right;
}

#resettc-button{
    width: 40%;
    float: left;
}

div.container6 {
    height: 10em;
    display: flex;
    align-items: center;
    justify-content: center }
div.container6 p {
margin: 0 }

#data-inventory-text{
    color: #006ADB;
    cursor: pointer;
    padding: 10px;
    font-style: normal;
    margin-right: 16px;
}


#loading-image-m_stations{
    display: inline-block;
}

#loading-screen{
    position: absolute;
    top: 45%;
    left: 45%;
}

#precipitation-button{
    width: 100%;
    float: center;
    height: 50px;
}

#help-button{
    width: 100%;
    float: center;
}

#applyxs-button{
    width: 100%;
    float: center;
    height: 50px;
}

#addreservoir-button{
    width: 100%;
    float: center;
    height: 50px;
}

#redoxs-button{
    width: 100%;
    float: center;
}

#addxs-button{
    width: 100%;
    float: center;
    height: 50px;
}

#plotxs-button{
    width: 100%;
    float: center;
}

#downloadwintr20output-button{
    width: 100%;
    float: center;
    display: none;
    height: 50px;
}

#downloadwintr20input-button{
    width: 100%;
    float: center;
    display: none;
    height: 50px;
}

#downloadwintr20error-button{
    width: 100%;
    float: center;
    display: none;
    height: 50px;
}

.scroll-container {
    width: 430px;
    height: 320px;
    overflow: hidden;
    text-align: center;
}

.matches{
    border: 1px solid #d4d4d4;
    border-bottom: none;
    border-top: none;
    z-index: 2;
    top: 100%;
    left: 0;
    right: 0;
    position: absolute;
}

.matches div{
    padding: 10px;
    cursor: pointer;
    background-color: #fff; 
    border-bottom: 1px solid #d4d4d4; 
}

.matches div:hover{
    background-color: #e9e9e9; 
}

.checkbox-form{
    display:block;
    float: right;
    width: 100%;
}

.checkbox-box{
    float: right;
}

.complete-form{
    width: 40%;
    float: right;
}

.radio-form{
    width: 20%;
    float: right;
}

.complete-input{
    width: 100%;
    height: 30px;
    margin-bottom: 15px;
    float: right;
}

.selection-option{
    margin: 15px 0px;
}

.expand-class{
    height: 15px;
    width: 15px;
}

.button-api-option{
    width: 200px;
    height: 120px;
    background-color: #e6e9ef;
    padding: 10px;
    margin: 20px 20px;
    font-size: 20px;
    font-weight: bold;
    border: 2px solid #cfcaca;
}

.button-api-option:hover {
    cursor: pointer;
}

.api-and-description{
    height: 400px;
    margin: 0px 30px;
    max-width: 290px;
    padding: 0px 16px;
    border: 3px solid #e7e7e7;
    background-color: #f5f5f5;
    border-radius: 5px;
}

.option-details{
    display: flex;
}


.dropdown-button{
    width: 100px;
    background-color: aqua;
}

.dropdown-content{
    display: none;
    position: absolute;
    min-width: 160px;
    overflow: auto;
    display: block;
}

.blue-button{
    color: #fff;
    padding: 10px;
    text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
    background-color: #006dcc;
    *background-color: #04c;
    background-image: -moz-linear-gradient(top,#08c,#04c);
    background-image: -webkit-gradient(linear,0 0,0 100%,from(#08c),to(#04c));
    background-image: -webkit-linear-gradient(top,#08c,#04c);
    background-image: -o-linear-gradient(top,#08c,#04c);
    background-image: linear-gradient(to bottom,#08c,#04c);
    background-repeat: repeat-x;
    border-color: #04c #04c #002a80;
    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
}

.inline{
    display: inline-block;
    width: 100%;
    line-height:30px;
    align-items: center;
    font-size:10pt;
}
/* ... */

